--- a/master.yaml
+++ b/master.yaml
@@ -61,7 +61,8 @@ Resources:
       Parameters:
         VPC: !GetAtt VPC.Outputs.VPC
         Cluster: !GetAtt ECS.Outputs.Cluster
-        DesiredCount: 3
+        DesiredCount: 4
+        LoadBalancerFullName: !GetAtt ALB.Outputs.LoadBalancerFullName
         Listener: !GetAtt ALB.Outputs.Listener
         Path: /
         ECSServiceAutoScalingRoleARN: !GetAtt ECS.Outputs.ECSServiceAutoScalingRole
