--- a/master.yaml
+++ b/master.yaml
@@ -32,58 +32,58 @@ Resources:
         EnvironmentName: !Ref AWS::StackName
         VPC: !GetAtt VPC.Outputs.VPC
 
-#   ALB:
-#     Type: AWS::CloudFormation::Stack
-#     Properties:
-#       TemplateURL: https://s3.amazonaws.com/epam-phase3-aws-cfn-petclinic/infrastructure/load-balancers.yaml
-#       Parameters:
-#         EnvironmentName: !Ref AWS::StackName
-#         VPC: !GetAtt VPC.Outputs.VPC
-#         Subnets: !GetAtt VPC.Outputs.PublicSubnets
-#         SecurityGroup: !GetAtt SecurityGroups.Outputs.LoadBalancerSecurityGroup
-#
-#   ECS:
-#     Type: AWS::CloudFormation::Stack
-#     Properties:
-#       TemplateURL: https://s3.amazonaws.com/epam-phase3-aws-cfn-petclinic/infrastructure/ecs-cluster.yaml
-#       Parameters:
-#         EnvironmentName: !Ref AWS::StackName
-#         InstanceType: t2.medium
-#         ClusterSize: "2"
-#         ClusterSizeMax: "6"
-#         SecurityGroup: !GetAtt SecurityGroups.Outputs.ECSHostSecurityGroup
-#         Subnets: !GetAtt VPC.Outputs.PrivateSubnets
-#
-#   RDS:
-#     Type: AWS::CloudFormation::Stack
-#     Properties:
-#       TemplateURL: https://s3.amazonaws.com/epam-phase3-aws-cfn-petclinic/infrastructure/rds-mysql.yaml
-#       Parameters:
-#         EcsSecurityGroup: !GetAtt SecurityGroups.Outputs.ECSHostSecurityGroup
-#         VPC: !GetAtt VPC.Outputs.VPC
-#         PrivateSubnets: !GetAtt VPC.Outputs.PrivateSubnets
-#
-#   PetclinicService:
-#     Type: AWS::CloudFormation::Stack
-#     Properties:
-#       TemplateURL: https://s3.amazonaws.com/epam-phase3-aws-cfn-petclinic/services/petclinic-service/service.yaml
-#       Parameters:
-#         Cluster: !GetAtt ECS.Outputs.Cluster
-#         DesiredCount: "4"
-#         MaxCount: "12"
-#         Listener: !GetAtt ALB.Outputs.HttpsListener
-#         DefaultTargetGroup: !GetAtt ALB.Outputs.DefaultTargetGroup
-#         DefaultTargetGroupFullName: !GetAtt ALB.Outputs.DefaultTargetGroupFullName
-#         Path: /
-#         ECSServiceAutoScalingRoleARN: !GetAtt ECS.Outputs.ECSServiceAutoScalingRole
-#         JDBCConnectionString: !GetAtt RDS.Outputs.PetClinicDBJDBCConnectionString
-#         DBPassword: !GetAtt RDS.Outputs.DBPassword
-#         DBUser: !GetAtt RDS.Outputs.DBUser
-#         ContainerImageName: 414831080620.dkr.ecr.us-west-2.amazonaws.com/petclinic
-#         ImageVersion: latest
-#
-# Outputs:
-#
-#   PetclinicServiceUrl:
-#     Description: The URL endpoint for the petclinic service
-#     Value: !Join ["", ["https://", !GetAtt ALB.Outputs.LoadBalancerUrl]]
+  ALB:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      TemplateURL: https://s3.amazonaws.com/epam-phase3-aws-cfn-petclinic/infrastructure/load-balancers.yaml
+      Parameters:
+        EnvironmentName: !Ref AWS::StackName
+        VPC: !GetAtt VPC.Outputs.VPC
+        Subnets: !GetAtt VPC.Outputs.PublicSubnets
+        SecurityGroup: !GetAtt SecurityGroups.Outputs.LoadBalancerSecurityGroup
+
+  ECS:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      TemplateURL: https://s3.amazonaws.com/epam-phase3-aws-cfn-petclinic/infrastructure/ecs-cluster.yaml
+      Parameters:
+        EnvironmentName: !Ref AWS::StackName
+        InstanceType: t2.medium
+        ClusterSize: "2"
+        ClusterSizeMax: "6"
+        SecurityGroup: !GetAtt SecurityGroups.Outputs.ECSHostSecurityGroup
+        Subnets: !GetAtt VPC.Outputs.PrivateSubnets
+
+  RDS:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      TemplateURL: https://s3.amazonaws.com/epam-phase3-aws-cfn-petclinic/infrastructure/rds-mysql.yaml
+      Parameters:
+        EcsSecurityGroup: !GetAtt SecurityGroups.Outputs.ECSHostSecurityGroup
+        VPC: !GetAtt VPC.Outputs.VPC
+        PrivateSubnets: !GetAtt VPC.Outputs.PrivateSubnets
+
+  PetclinicService:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      TemplateURL: https://s3.amazonaws.com/epam-phase3-aws-cfn-petclinic/services/petclinic-service/service.yaml
+      Parameters:
+        Cluster: !GetAtt ECS.Outputs.Cluster
+        DesiredCount: "4"
+        MaxCount: "12"
+        Listener: !GetAtt ALB.Outputs.HttpsListener
+        DefaultTargetGroup: !GetAtt ALB.Outputs.DefaultTargetGroup
+        DefaultTargetGroupFullName: !GetAtt ALB.Outputs.DefaultTargetGroupFullName
+        Path: /
+        ECSServiceAutoScalingRoleARN: !GetAtt ECS.Outputs.ECSServiceAutoScalingRole
+        JDBCConnectionString: !GetAtt RDS.Outputs.PetClinicDBJDBCConnectionString
+        DBPassword: !GetAtt RDS.Outputs.DBPassword
+        DBUser: !GetAtt RDS.Outputs.DBUser
+        ContainerImageName: 414831080620.dkr.ecr.us-west-2.amazonaws.com/petclinic
+        ImageVersion: latest
+
+Outputs:
+
+  PetclinicServiceUrl:
+    Description: The URL endpoint for the petclinic service
+    Value: !Join ["", ["https://", !GetAtt ALB.Outputs.LoadBalancerUrl]]
