Minor comments and text refactoring

--- a/infrastructure/load-balancers.yaml
+++ b/infrastructure/load-balancers.yaml
@@ -1,6 +1,5 @@
 Description: >
-  This template deploys an Application Load Balancer that exposes our various ECS services.
-  We create them in a seperate nested template, so it can be referenced by all of the other nested templates.
+  This template deploys an Application Load Balancer that exposes ECS service.
 
 Parameters:
   EnvironmentName:
@@ -46,12 +45,6 @@ Resources:
       Protocol: HTTPS
       Certificates:
         - CertificateArn: !Ref SSLCertificateARN
-        # - CertificateArn: !Join
-        #       - ''
-        #       - - 'arn:aws:acm::' #or arn:aws:iam?
-        #         - !Ref 'AWS::AccountId'
-        #         - ':certificate/'
-        #         - !Ref SSLCertificateName
       DefaultActions:
         - Type: forward
           TargetGroupArn: !Ref DefaultTargetGroup
@@ -69,16 +62,8 @@ Resources:
       Port: 80
       Protocol: HTTP
 
-  # We define a default target group here, as this is a mandatory Parameters
-  # when creating an Application Load Balancer Listener. This is not used, instead
-  # a target group is created per-service in each service template (../services/*)
   DefaultTargetGroup:
     Type: AWS::ElasticLoadBalancingV2::TargetGroup
-    # Properties:
-    #   Name: !Sub ${EnvironmentName}-default
-    #   VpcId: !Ref VPC
-    #   Port: 80
-    #   Protocol: HTTP
     Properties:
       Name: !Sub ${EnvironmentName}-default
       VpcId: !Ref VPC
