--- a/infrastructure/ecs-cluster.yaml
+++ b/infrastructure/ecs-cluster.yaml
@@ -30,10 +30,10 @@ Parameters:
     Description: Select the Security Group to use for the ECS cluster hosts
     Type: AWS::EC2::SecurityGroup::Id
 
-  ECSAMI:
-    Description: ECS-Optimized AMI ID
-    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
-    Default: /aws/service/ecs/optimized-ami/amazon-linux/recommended/image_id
+  # ECSAMI:
+  #   Description: ECS-Optimized AMI ID
+  #   Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
+  #   Default: /aws/service/ecs/optimized-ami/amazon-linux/recommended/image_id
 
   PhoneNumberForSMSAlert:
     Description: Add this initial cell for SMS notification of EC2 instance scale up/down alerts
@@ -44,6 +44,41 @@ Parameters:
     Description: 'The email address of the admin who receives alerts.'
     Type: String
     Default: "romanorlovskiy92@gmail.com"
+
+Mappings:
+  RegionMap:
+    'eu-north-1':
+      ECSAMI: 'ami-036cf93383aba5279'
+    'ap-south-1':
+      ECSAMI: 'ami-0d143ad35f29ad632'
+    'eu-west-3':
+      ECSAMI: 'ami-0b4b8274f0c0d3bac'
+    'eu-west-2':
+      ECSAMI: 'ami-016a20f0624bae8c5'
+    'eu-west-1':
+      ECSAMI: 'ami-09cd8db92c6bf3a84'
+    'ap-northeast-2':
+      ECSAMI: 'ami-0470f8828abe82a87'
+    'ap-northeast-1':
+      ECSAMI: 'ami-00f839709b07ffb58'
+    'sa-east-1':
+      ECSAMI: 'ami-04e333c875fae9d77'
+    'ca-central-1':
+      ECSAMI: 'ami-039a05a64b90f63ee'
+    'ap-southeast-1':
+      ECSAMI: 'ami-0c5b69a05af2f0e23'
+    'ap-southeast-2':
+      ECSAMI: 'ami-011ce3fbe73731dfe'
+    'eu-central-1':
+      ECSAMI: 'ami-0ab1db011871746ef'
+    'us-east-1':
+      ECSAMI: 'ami-0bc08634af113cccb'
+    'us-east-2':
+      ECSAMI: 'ami-00cffcd24cb08edf1'
+    'us-west-1':
+      ECSAMI: 'ami-05cc68a00d392447a'
+    'us-west-2':
+      ECSAMI: 'ami-0054160a688deeb6a'
 
 Resources:
   ECSCluster:
@@ -172,7 +207,7 @@ Resources:
   ECSLaunchConfiguration:
     Type: AWS::AutoScaling::LaunchConfiguration
     Properties:
-      ImageId: !Ref ECSAMI
+      ImageId: !FindInMap [RegionMap, !Ref 'AWS::Region', ECSAMI]
       InstanceType: !Ref InstanceType
       SecurityGroups:
         - !Ref SecurityGroup
