--- a/infrastructure/rds-mysql.yaml
+++ b/infrastructure/rds-mysql.yaml
@@ -77,10 +77,10 @@ Resources:
       MasterUserPassword: !Ref DBPassword
       DBSubnetGroupName: !Ref PetClinicSubnetGroup
       # DBParameterGroupName: !Ref RDSDBParameterGroup
-      EnableCloudwatchLogsExports:
-        - error
-        - general
-        - slowquery
+      # EnableCloudwatchLogsExports:
+      #   - error
+      #   - general
+      #   - slowquery
       VPCSecurityGroups:
       - Fn::GetAtt:
         - DBSecurityGroup
